[gd_scene load_steps=26 format=2]

[ext_resource path="res://Cars/car_0.png" type="Texture" id=1]
[ext_resource path="res://Tiles/road_asphalt57.png" type="Texture" id=2]
[ext_resource path="res://Cars/car_1.png" type="Texture" id=3]
[ext_resource path="res://Cars/car_2.png" type="Texture" id=4]
[ext_resource path="res://Cars/car_3.png" type="Texture" id=5]
[ext_resource path="res://CarsMenu.gd" type="Script" id=6]
[ext_resource path="res://Font/Giants-Inline.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://BGMs/Let's Go.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 122.5, 115.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 35.25, 65.625 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "next_1"
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -73 ), Vector2( -288, -73 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "next_2"
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -288, -73 ), Vector2( -576, -73 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "next_3"
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -576, -73 ), Vector2( -864, -73 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "previous_0"
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -288, -73 ), Vector2( 0, -73 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "previous_1"
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -576, -73 ), Vector2( -288, -73 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "previous_2"
tracks/0/type = "value"
tracks/0/path = NodePath("Cars:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -864, -73 ), Vector2( -576, -73 ) ]
}

[sub_resource type="DynamicFont" id=10]
size = 55
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.0862745, 0.662745, 0.631373, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 3
shadow_offset = Vector2( 2, 2 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.196078, 0.764706, 0.760784, 1 )
shadow_color = Color( 0.0823529, 0.172549, 0.168627, 0.6 )
shadow_size = 5
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=14]
size = 44
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0, 0, 0.352941 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.509804 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.431373 )

[node name="CarsMenu" type="Node2D"]
script = ExtResource( 6 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.65098, 0.788235, 0.796078, 0.686275 )

[node name="Floor" type="Area2D" parent="ColorRect"]
position = Vector2( 398, 139 )
collision_layer = 2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Floor"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_right = 128.0
margin_bottom = 128.0
rect_scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Floor"]
visible = false
position = Vector2( 114.5, 115.5 )
shape = SubResource( 1 )

[node name="Cars" type="Control" parent="ColorRect"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_group_": true
}

[node name="BlackCar" type="KinematicBody2D" parent="ColorRect/Cars"]
position = Vector2( 512, 328 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Cars/BlackCar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -65.0
margin_right = 35.0
margin_bottom = 66.0
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Cars/BlackCar"]
position = Vector2( -0.5, -0.125 )
shape = SubResource( 2 )

[node name="Truck" type="KinematicBody2D" parent="ColorRect/Cars"]
position = Vector2( 800, 328 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Cars/Truck"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -65.0
margin_right = 35.0
margin_bottom = 66.0
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Cars/Truck"]
position = Vector2( -0.75, -0.125 )
shape = SubResource( 2 )

[node name="Motorcycle" type="KinematicBody2D" parent="ColorRect/Cars"]
position = Vector2( 1376, 328 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Cars/Motorcycle"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -21.0
margin_top = -49.0
margin_right = 23.0
margin_bottom = 51.0
texture = ExtResource( 5 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Cars/Motorcycle"]
position = Vector2( 0.25, -0.125 )
shape = SubResource( 2 )

[node name="MiniCar" type="KinematicBody2D" parent="ColorRect/Cars"]
position = Vector2( 1088, 328 )
collision_mask = 2
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="ColorRect/Cars/MiniCar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -18.0
margin_top = -31.0
margin_right = 21.0
margin_bottom = 34.0
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColorRect/Cars/MiniCar"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
playback_speed = 2.5
anims/RESET = SubResource( 3 )
anims/next_1 = SubResource( 6 )
anims/next_2 = SubResource( 4 )
anims/next_3 = SubResource( 5 )
anims/previous_0 = SubResource( 7 )
anims/previous_1 = SubResource( 9 )
anims/previous_2 = SubResource( 8 )

[node name="Button" type="Button" parent="ColorRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -160.0
margin_top = -137.0
margin_right = 160.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
text = "선택!"
icon_align = 1

[node name="LeftButton" type="Button" parent="ColorRect"]
margin_left = 70.0
margin_top = 145.0
margin_right = 170.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "←"
icon_align = 1

[node name="RightButton" type="Button" parent="ColorRect"]
margin_left = 854.0
margin_top = 145.0
margin_right = 954.0
margin_bottom = 365.0
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/normal = SubResource( 17 )
text = "→"
icon_align = 1

[node name="BGM" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 8 )
autoplay = true

[connection signal="body_entered" from="ColorRect/Floor" to="." method="_on_Floor_body_entered"]
[connection signal="body_exited" from="ColorRect/Floor" to="." method="_on_Floor_body_exited"]
[connection signal="body_shape_entered" from="ColorRect/Floor" to="." method="_on_Floor_body_shape_entered"]
[connection signal="pressed" from="ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="ColorRect/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="ColorRect/RightButton" to="." method="_on_RightButton_pressed"]
